tests/baselines/reference/assignmentCompatInterfaceWithStringIndexSignature(strict=true).errors.txt
assignmentCompatInterfaceWithStringIndexSignature.ts(2,6): error TS7006: Parameter 'e' implicitly has an 'any' type.
assignmentCompatInterfaceWithStringIndexSignature.ts(15,5): error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'IHandlerMap'.
  Index signature for type 'string' is missing in type 'Foo'.


==== assignmentCompatInterfaceWithStringIndexSignature.ts (2 errors) ====
    interface IHandler {
        (e): boolean;
         ~
!!! error TS7006: Parameter 'e' implicitly has an 'any' type.
    }
    
    interface IHandlerMap {
        [type: string]: IHandler;
    }
    
    class Foo {
        public Boz(): void { }
    }
    
    function Biz(map: IHandlerMap) { }
    
    Biz(new Foo());
        ~~~~~~~~~
!!! error TS2345: Argument of type 'Foo' is not assignable to parameter of type 'IHandlerMap'.
!!! error TS2345:   Index signature for type 'string' is missing in type 'Foo'.
    